tests/machine/x/erlang/map_int_key.error
exit status 127
escript: exception error: no function clause matching lists:nth(2,#{1 => "a",2 => "b"}) (lists.erl, line 198)

